# flat_earth

./: CMakeLists.txt  README.md  nodelet_description.xml  package.xml
launch/: demo.launch  flat_earth.launch
scripts/: demo.py  orbiting.py  plot.py  wgs84.py
src/: convert.hpp  earth_tf_publisher.cpp  earth_tf_publisher.hpp  geometry.hpp  transform.hpp  wgs84.cpp  wgs84.hpp
test/: case1.test
