<?xml version="1.0"?>
<package format="2">
    <name>flat_earth</name>
    <version>1.0.0</version>
    <description>The flat_earth package</description>
    <maintainer email="nkyoku@gmail.com">Fujii Naomichi</maintainer>
    <license>MIT License</license>
    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>pluginlib</build_depend>
    <build_depend>nodelet</build_depend>
    <exec_depend>pluginlib</exec_depend>
    <exec_depend>nodelet</exec_depend>
    <depend>geographic_msgs</depend>
    <depend>roscpp</depend>
    <depend>rospy</depend>
    <depend>tf2</depend>
    <depend>tf2_msgs</depend>
    <depend>tf2_ros</depend>
    <exec_depend>python-geographiclib</exec_depend>
    <export>
        <nodelet plugin="${prefix}/nodelet_description.xml"/>
    </export>
</package>
